<resources>
    <string name="app_name">Deal</string>
    <string name="logo">Logo</string>
    <string name="jobseeker">JobSeeker</string>
    <string name="employer">Employer</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_jobseeker_maps">Jobseeker Maps</string>
    <string name="registration">Registration</string>
    <string name="id_number">ID Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="info">Info</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="terms_condition"><u>Terms &amp; Condition</u></string>
    <string name="i_agree_with_the">I agree with the</string>
    <string name="err_id_number">Please enter your ID Number.</string>
    <string name="err_mobile_number">Please enter your Mobile Number.</string>
    <string name="err_password">Please enter your Password.</string>
    <string name="err_confirm_password">Please enter your Confirm Password.</string>
    <string name="err_agree">Please indicate that you have read and agreed to the Terms and Conditions.</string>
    <string name="id_number_info">ID Number:\n Must enter your valid ID Number.</string>
    <string name="mobile_number_info">Mobile Number:\n Must enter your valid Mobile Number.</string>
    <string name="password_info">Password:\n
                                    - Must be different from your ID Number.\n
                                    - Must contain letters and number (special characters optional).\n
                                    - Length between 6 to 15 characters</string>
    <string name="confirm_password_info">Confirm Password:\nMust be the same password you entered earlier.</string>
    <string name="code_prompt">Country Code</string>
    <string name="country_code">Country Code</string>
    <string name="tooltips_default">Tooltip using PopupWindow :)</string>
    <string name="nav_up">nav_up</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="sms_verify_content_1">You will receive a verification code via SMS shortly</string>
    <string name="sms_verify_content_2">Please enter your \nverification code</string>
    <string name="resend">Resend</string>
    <string name="didn_t_receive_the_code">Didn\'t receive the code?</string>
    <string name="verify">Verify</string>
    <string name="count_down">00</string>

</resources>
