<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="it.leenergy.com.deal.jobseeker.registration.JSSMSVerifyActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="0dp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/assistant"
                android:text="@string/app_name"
                android:textColor="#ffab00"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSMSVerification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/assistant"
                        android:gravity="center_horizontal"
                        android:text="@string/sms_verification"
                        android:textColor="@color/colorPrimary"
                        android:textSize="33sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvContent_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:fontFamily="@font/assistant"
                        android:text="@string/sms_verify_content_1"
                        android:textColor="@color/colorDark"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvContent_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/assistant"
                        android:gravity="center"
                        android:text="@string/sms_verify_content_2"
                        android:textColor="@color/colorDark"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/txtVerificationCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        android:ems="10"
                        android:fontFamily="@font/assistant"
                        android:inputType="number"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="2"
                            android:paddingEnd="5dp"
                            android:paddingStart="10dp">

                            <Button
                                android:id="@+id/btnCancel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cancel_button"
                                android:fontFamily="@font/assistant"
                                android:textColor="@color/colorDark"
                                android:text="@string/cancel" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="3"
                            android:paddingEnd="10dp"
                            android:paddingStart="2dp">

                            <Button
                                android:id="@+id/btnSubmit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/submit_button"
                                android:fontFamily="@font/assistant"
                                android:text="@string/submit"
                                android:textColor="@android:color/white" />
                        </RelativeLayout>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvDidntReceive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:fontFamily="@font/assistant"
                        android:text="Didn't receive the code?"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnResend"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/resend_button"
                        android:fontFamily="@font/assistant"
                        android:text="Resend"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</FrameLayout>
