<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="it.leenergy.com.deal.jobseeker.JSRegActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/assistant_extrabold"
                android:gravity="center_horizontal"
                android:text="@string/registration"
                android:textSize="33sp"
                android:textStyle="bold"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:baselineAligned="false">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilIDNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtIDNumber"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/assistant"
                            android:hint="@string/id_number"
                            android:inputType="number"
                            android:maxLength="8" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/imgIDNumberInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_info_grey_900_24dp"
                        android:contentDescription="@string/info" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilMobileNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/assistant"
                            android:hint="@string/mobile_number"
                            android:inputType="phone"
                            android:maxLength="7" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/imgMobileNoInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_info_grey_900_24dp"
                        android:contentDescription="@string/info" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:baselineAligned="false">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/assistant"
                            android:hint="@string/password" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/imgPasswordInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_info_grey_900_24dp"
                        android:contentDescription="@string/info" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:baselineAligned="false">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        >
                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/assistant"
                            android:hint="@string/confirm_password" />
                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:id="@+id/imgConfirmPasswordInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/ic_info_grey_900_24dp"
                        android:contentDescription="@string/info" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
